# keplemeyen-helper

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCIES.md  Doxyfile.in  LICENSE  README.md  SECURITY.md  build_and_hash.bat  build_installer.bat  bump_version.bat  csvparser.cpp  csvparser.h  generate_hashes.py  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc  verify.py  verify.sh  version.h  version.h.in
.github/: CODEOWNERS
.github/issue_template/: bug_report.md  pull_request_template.md
.github/workflows/: build.yml  release.yml
src/: csvparser.cpp  csvparser.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
